server listing, work on system tray
Took 1 hour 48 minutes